The scaffold at v0.57.0 (17ed89361), as tadas
Scaffold-Source: https://github.com/baristaze/swe_guidelines
Scaffold-Commit: 17ed89361b1751a1c4f394fc79a72ce8505ca513
Scaffold-Name: tadas
